# sqx

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: converters.rs  main.rs
src/adapters/: traits.rs
src/converters/: json.rs
src/helpers/: mod.rs
src/parsers/: mod.rs  netstat.rs  netstat_linux.rs  ps.rs  universal.rs
src/parsers/grammars/: netstat_linux.pest
src/traits/: mod.rs  ser_adapter.rs  structured.rs  tabled.rs
src/types/: from_sql.rs  mod.rs  serde_json.rs  to_sql.rs
