[package]
name = "sqx"
version = "0.1.0"
authors = ["twin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.*", features = ["full"] }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
clap = { version = "4.*", features = ["cargo"]}
log = "0.*"
pretty_env_logger = "0.*"
env_logger = "0.*"
anyhow = "1.*"
wild = "2.*"
csv = "1.*"
json_value_merge = "1.*"
uuid = { version = "1.2.*", features = ["v7"] }

# database engine
surrealdb = { path = "../surrealdb/lib", features = ["kv-mem"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = 0
