[package]
name = "sqx"
version = "0.1.0"
authors = ["twin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.*", features = ["full"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
clap = { version = "4.1.*", features = ["cargo"]}
log = "0.4.*"
pretty_env_logger = "0.4.*"
env_logger = "0.10.*"
anyhow = "1.0.*"
wild = "2.1.*"
indicatif = "0.17.*"
tabled = "0.10.*"
atty = "0.2.*"
# serde-transcode = "1.1.*"
uuid = "1.3.*"
polars = { version = "0.27.*", features = ["lazy", "serde","polars-io"], default-features=false }
polars-io = { version = "0.27.*", features = ["json", "serde"], default-features=false }
# database engine
surrealdb = { git = "https://github.com/surrealdb/surrealdb", features = ["kv-rocksdb", "kv-mem"], default-features = false }


# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.5.0"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
opt-level = "z"
debug = 0
